# CharacterKeep

./: .gitignore  README.md  package-lock.json  package.json  plan.md
docs/: artifactkeep-reuse-audit.md  v1-manual-qa-checklist.md  v1-manual-qa-results.md
src/: index.html  main.js  tauriBridge.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: image_metadata.rs  lib.rs  main.rs
src/assets/: guide.md
src/assets/schemas/: character.schema.json  collection.schema.json  settings.schema.json
src/styles/: main.css
