[package]
name = "characterkeep"
version = "0.1.0"
description = "A private local roleplay character vault"
authors = ["CharacterKeep"]
edition = "2021"

[lib]
name = "characterkeep_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
image = "0.24"
walkdir = "2.4"
zip = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
flate2 = "1"
